vbnc/vbnc/tests/Errors/32006-2.vb
Imports System
Class T
    Const M_String As int16 = "c"c
End Class